--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,7 +23,7 @@ const year = date.getFullYear();
             <a href="https://news.the.top" target="_blank">TOP News</a>
           </div>
 
-          <div class="item community">
+          <!-- <div class="item community">
             <div class="item-title">社媒</div>
             <a href="https://twitter.com/austinit" target="_blank">Twitter</a>
             <a href="https://github.com/austin2035" target="_blank">Github</a>
@@ -33,13 +33,13 @@ const year = date.getFullYear();
           <div class="item resources">
             <div class="item-title">友链</div>
             <a href="https://the.top">THE.TOP</a>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="bottom">
         <div class="copyright">
-          &copy; {`2018-${year}  ${SITE_NAME}`} 
-          <a href="//github.com/austin2035/astro-air-blog">astro-air-blog</a>
+          &copy; {`2023-${year}  ${SITE_NAME}`} 
+          <a href="//https://github.com/wangmuke/static-blog">static-blog</a>
         </div>
       </div>
     </div>
